[gd_scene load_steps=8 format=2]

[ext_resource path="res://LevelBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/Level_5.gd" type="Script" id=2]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://PressurePlate.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Small_Font.tres" type="DynamicFont" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Base" parent="." instance=ExtResource( 1 )]

[node name="MovingWall" parent="." instance=ExtResource( 3 )]
position = Vector2( 392, 256 )
rotation = 1.5708
scale = Vector2( 0.4, 1 )

[node name="MovingWall2" parent="." instance=ExtResource( 3 )]
position = Vector2( 552, 160 )
rotation = 1.5708
scale = Vector2( 0.4, 1 )

[node name="MovingWall3" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 352 )
rotation = 1.5708
scale = Vector2( 0.4, 1 )

[node name="MovingWall4" parent="." instance=ExtResource( 3 )]
position = Vector2( 528, 448 )
rotation = 1.5708
scale = Vector2( 0.4, 1 )

[node name="MovingWall5" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 352 )
rotation = 1.5708
scale = Vector2( 0.4, 1 )

[node name="MovingWall6" parent="." instance=ExtResource( 3 )]
position = Vector2( 760, 256 )
rotation = 1.5708
scale = Vector2( 0.4, 1 )

[node name="MovingWall7" parent="." instance=ExtResource( 3 )]
position = Vector2( 416, 64 )
rotation = 1.5708
scale = Vector2( 0.4, 1 )

[node name="MovingWall8" parent="." instance=ExtResource( 3 )]
position = Vector2( 720, 56 )
rotation = 1.5708
scale = Vector2( 0.4, 1 )

[node name="Plats" type="Node2D" parent="."]

[node name="Platform" parent="Plats" instance=ExtResource( 3 )]
position = Vector2( 624, 504 )
scale = Vector2( 3, 1 )

[node name="Platform2" parent="Plats" instance=ExtResource( 3 )]
position = Vector2( 392, 400 )
scale = Vector2( 3, 1 )

[node name="Platform3" parent="Plats" instance=ExtResource( 3 )]
position = Vector2( 632, 304 )
scale = Vector2( 3, 1 )

[node name="Platform4" parent="Plats" instance=ExtResource( 3 )]
position = Vector2( 400, 208 )
scale = Vector2( 3, 1 )

[node name="Platform5" parent="Plats" instance=ExtResource( 3 )]
position = Vector2( 624, 112 )
scale = Vector2( 3, 1 )

[node name="Button3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 264 )

[node name="Button" parent="." instance=ExtResource( 4 )]
position = Vector2( 16, 360 )
rotation = 3.14159

[node name="Button2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 464 )

[node name="Button4" parent="." instance=ExtResource( 4 )]
position = Vector2( 16, 168 )
rotation = 3.14159

[node name="Button5" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 72 )

[node name="PressurePlate" parent="." instance=ExtResource( 5 )]
position = Vector2( 584, 584 )

[node name="PressurePlate2" parent="." instance=ExtResource( 5 )]
position = Vector2( 744, 392 )

[node name="PressurePlate3" parent="." instance=ExtResource( 5 )]
position = Vector2( 440, 296 )

[node name="Player" parent="." instance=ExtResource( 6 )]

[node name="Popup" type="Popup" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Popup"]
margin_left = 96.0
margin_top = 144.0
margin_right = 1253.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Thanks for playing!"

[node name="Button" type="Button" parent="Popup"]
margin_left = 320.0
margin_top = 256.0
margin_right = 720.0
margin_bottom = 391.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU"

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="Popup/Button" to="." method="_on_Button_pressed"]
